--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ dist: trusty
 addons:
   apt:
     packages:
+    - lmodern
     - texlive-latex-recommended
     - texlive-latex-extra
     - texlive-luatex
