--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ addons:
   apt:
     packages:
     - lmodern
+    - texlive-fonts-recommended
     - texlive-latex-recommended
     - texlive-latex-extra
     - texlive-luatex
